New post, WebGL

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-title: گیت‌هاب نوشته‌ها
-description: این قافلهٔ عمر عجب می‌گذرد
+title: ebraminio.github.io
+description: گیت‌هاب نوشته‌ها
+lang: fa
 theme: jekyll-theme-cayman
 markdown: kramdown
 show_downloads: false
