Move posts to outdated section

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: ebraminio.github.io
-description: گیت‌هاب نوشته‌ها
+description: 'Welcome'
 lang: fa
 theme: jekyll-theme-cayman
 markdown: kramdown
